--- a/tmuxinator/aica-web-image.yml
+++ b/tmuxinator/aica-web-image.yml
@@ -3,19 +3,39 @@
 name: aica-web-image
 root: ~/aica
 
-# pre_window: export currenttp=1
+#pre_window: export currenttp=1
 
 windows:
   - web-image:
       layout: tiled
       panes:
-        # - export currentuser=0 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=1 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=2 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=3 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=4 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=5 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=6 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=7 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        - export currentuser=8 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
-        # - export currentuser=9 && sudo cd /home/robot$currentuser/aica && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash && sudo ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        #- robot0:
+        #  - export currentuser=0 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+        #  - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot1:
+          - export currentuser=1 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot2:
+          - export currentuser=2 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot3:
+          - export currentuser=3 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot4:
+          - export currentuser=4 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot5:
+          - export currentuser=5 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot6:
+          - export currentuser=6 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot7:
+          - export currentuser=7 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        - robot8:
+          - export currentuser=8 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+          - ros2 run web_video_server web_video_server --ros-args -p port:=8081
+        #- robot9:
+        #  - export currentuser=9 && sudo docker container exec -it -u ros2 robot$currentuser /bin/bash
+        #  - ros2 run web_video_server web_video_server --ros-args -p port:=8081
