--- a/2_aica_yolo_web/aica-launcher-vision-web.toml
+++ b/2_aica_yolo_web/aica-launcher-vision-web.toml
@@ -11,9 +11,10 @@
 "@aica/foss/toolkits/ml" = "v1.0.0-cpu24.04" # prerequisite for YoloExecutor
 
 # other extensions
-"@aica/foss/web-video-server" = "v0.1.0" # enables web streaming of video topics 
+#"@aica/foss/web-video-server" = "v0.1.0" # enables web streaming of video topics 
 # launcher syntax: ghcr.io/aica-technology/web-video-server:v0.1.0
-"object-detection-utils" = "docker-image://object-detection-utils" # self-built component to feed goal frame extracted from yolo to robot velocity controller
+#"object-detection-utils" = "docker-image://object-detection-utils" # self-built component to feed goal frame extracted from yolo to robot velocity controller
+# launcher syntax: object-detection-utils
 
 # add hardware collections
 #"@aica/collections/intel-realsense-collection" = "v2.0.1" # D4XX and L515 cameras models, stream RGBD
